@@ -13,14 +13,14 @@
 #include "mud/player.h"
 #include "mud/race.h"
 
-class TelnetModeNewCreature : public ITelnetMode
+class TelnetModeNewCharacter : public ITelnetMode
 {
 	public:
 	enum state_t { STATE_BEGIN = 0, STATE_NAME = 0, STATE_NAME_CONFIRM, STATE_RACE, STATE_RACE_CONFIRM, STATE_GENDER, STATE_HEIGHT, STATE_TRAITS, STATE_TRAITS_CONFIRM, STATE_STATS, STATE_STATS_CONFIRM, STATE_FINAL_CONFIRM, STATE_CONTINUE, STATE_RENAME, STATE_RENAME_CONFIRM
 	};
 	enum height_t { HEIGHT_VERY_SHORT, HEIGHT_SHORT, HEIGHT_AVERAGE, HEIGHT_TALL, HEIGHT_VERY_TALL };
 
-	TelnetModeNewCreature (TelnetHandler* s_handler, Account* s_account) : ITelnetMode (s_handler), account(s_account), state(STATE_BEGIN) {}
+	TelnetModeNewCharacter (TelnetHandler* s_handler, Account* s_account) : ITelnetMode (s_handler), account(s_account), state(STATE_BEGIN) {}
 
 	virtual int initialize ();
 	virtual void prompt ();
